# gamestuff

./: .gitignore  .gitmodules  .ninja_deps  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
Assets/Data/: Levels.lua  leveltest2.aseprite
Assets/Shaders/: scene.frag  text.frag  text.vert
Assets/Textures/.mayaSwatches/: colormap.png_hcm.swatch
CSC8503/: CMakeCache.txt  CMakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  Main.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  StateGameObject.cpp  TutorialGame.cpp  TutorialGame.h  cmake_install.cmake
CSC8503CoreClasses/: AABBVolume.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Debug.cpp  Debug.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  Level.cpp  Level.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  Observer.cpp  Observer.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PositionConstraint.h  PushdownMachine.cpp  QuadTree.h  State.h  StateMachine.cpp  StateMachine.h  Transform.cpp  Transform.h  TweenManager.cpp  TweenManager.h  cmake_install.cmake
Client/: CMakeLists.txt  ClientGame.cpp  ClientGame.h  PauseScreen.cpp  PauseScreen.h  cmake_install.cmake
NCLCoreClasses/: Assets.h  Mesh.h  Quaternion.h  TextureLoader.cpp  Vector3.cpp  Vector3.h
OpenGLRendering/: OpenGLRendering.lib  cmake_install.cmake
Replicated/: Replicated.h  lutils.h
Server/: CMakeLists.txt  ServerGame.cpp  ServerGame.h  cmake_install.cmake  server.ilk
VulkanRendering/: CMakeLists.txt
